add Post model, post crud
add index, show, create and new pages for posts, add post migration

--- a/apps/web/templates/shared/_flash.html.slim
+++ b/apps/web/templates/shared/_flash.html.slim
@@ -1,6 +1,6 @@
 - if flash[:notice]
   = flash[:notice]
-- if flash[:errors] && flash[:errors].is_a?(Array)
+- if flash[:errors] && flash[:errors].is_a?(Hash)
   ul
     - flash[:errors].each do |error|
       li
