--- a/apps/web/templates/posts/index.html.slim
+++ b/apps/web/templates/posts/index.html.slim
@@ -1,1 +1,9 @@
-| here will be list of posts soon...
+- if posts.any?
+  - posts.each do |post|
+    h2= post.title
+    p= "author: #{post.user.full_name}"
+    p= post.body
+    = link_to 'read more', routes.post_path(post.id)
+    hr
+- else
+  | here will be list of posts soon...
