add edit, update and delete posts methods
hide edit and delete btns if no user

--- a/apps/web/templates/posts/show.html.slim
+++ b/apps/web/templates/posts/show.html.slim
@@ -1,3 +1,7 @@
 h2= post.title
 p= "author: #{post.user.full_name}"
 p= post.body
+- if user_signed_in?
+  = link_to 'edit post', routes.edit_post_path(post.id)
+  = form_for :post, routes.post_path(post.id), method: :delete do
+    = submit 'delete post'
