add styles for sign in form
fix navbar auth buttons, improve navbar mobile

--- a/apps/web/assets/stylesheets/application.css.sass
+++ b/apps/web/assets/stylesheets/application.css.sass
@@ -1,5 +1,10 @@
 // includes
 @import 'includes/variables'
+@import 'includes/bootstrap_custom'
+
+// shared
+@import 'shared/navbar'
 
 // pages
 @import 'posts'
+@import 'auth'
