add styles for index posts page and posts show page

--- a/apps/web/assets/stylesheets/posts.sass
+++ b/apps/web/assets/stylesheets/posts.sass
@@ -1,2 +1,13 @@
-.header
-  background-color: $color-purple
+.post
+  border-top: 5px solid $color-purple
+  &__title
+    font-size: 40px
+    font-weight: bolder
+    color: $color-purple
+  &__author
+    p
+      margin-bottom: 0
+      span
+        font-size: 18px
+        font-weight: bolder
+        color: $color-purple
