--- a/apps/web/templates/application.html.slim
+++ b/apps/web/templates/application.html.slim
@@ -11,7 +11,9 @@ html
     = render partial: 'shared/navbar'
     = render partial: 'shared/flash'
     .container-fluid
-      = yield
+      .row
+        .wrapper.col.mx-md-auto
+          = yield
 
     =javascript 'https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity: 'sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin: 'anonymous'
     =javascript 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js', integrity: 'sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q', crossorigin: 'anonymous'
