--- a/apps/web/templates/posts/index.html.slim
+++ b/apps/web/templates/posts/index.html.slim
@@ -1,9 +1,26 @@
 - if posts.any?
   - posts.each do |post|
-    h2= post.title
-    p= "author: #{post.user.full_name}"
-    p= post.body
-    = link_to 'read more', routes.post_path(post.id)
-    hr
+    .row.post.p-3
+      .col
+        .row
+          .col.text-center.post__title
+            = post.title
+        .row
+          .col.post__author
+            p
+              span
+                ' Author:
+              = post.user.full_name
+            p
+              span
+                ' Posted on:
+              = post.created_at.strftime("%B %d, %Y") + ' at ' + post.created_at.strftime("%H:%M")
+        hr
+        .row
+          .col.post__body
+            p =post_truncate(post.body)
+        .row
+          .col.post__actions
+            = link_to 'read more', routes.post_path(post.id), class: 'btn btn-primary'
 - else
   | here will be list of posts soon...
