--- a/apps/web/templates/posts/show.html.slim
+++ b/apps/web/templates/posts/show.html.slim
@@ -1,7 +1,25 @@
-h2= post.title
-p= "author: #{post.user.full_name}"
-p= post.body
-- if user_signed_in?
-  = link_to 'edit post', routes.edit_post_path(post.id)
-  = form_for :post, routes.post_path(post.id), method: :delete do
-    = submit 'delete post'
+.row.post.p-3
+  .col
+    .row
+      .col.text-center.post__title
+        = post.title
+    .row
+      .col.post__author
+        p
+          span
+            ' Author:
+          = post.user.full_name
+        p
+          span
+            ' Posted on:
+          = post.created_at.strftime("%B %d, %Y") + ' at ' + post.created_at.strftime("%H:%M")
+    hr
+    .row
+      .col.post__body
+        p= post.body
+    - if user_signed_in?
+      .row
+        .col.d-flex.justify-content-end
+          = link_to 'edit post', routes.edit_post_path(post.id), class: 'btn btn-warning d-inline-block mx-1'
+          = form_for :post, routes.post_path(post.id), method: :delete, class: 'd-inline-block mx-1' do
+            = submit 'delete post', class: 'btn btn-danger'
