--- a/apps/web/templates/posts/edit.html.slim
+++ b/apps/web/templates/posts/edit.html.slim
@@ -1,2 +1,7 @@
-h2 Edit post
-= render partial: 'posts/form'
+.row.justify-content-center
+  .post.col
+    .card
+      .card-header.text-center
+        h3 Edit post
+      .card-body
+        = render partial: 'posts/form'
