add bg image to body, change auth btns, fix navbar to top

--- a/apps/web/assets/stylesheets/shared/layout.sass
+++ b/apps/web/assets/stylesheets/shared/layout.sass
@@ -1,4 +1,11 @@
+body
+  background-image: url('main-bg.jpg')
+  background-repeat: no-repeat
+  background-position: center top
+  background-attachment: fixed
 .header
   background-color: $color-purple
 .wrapper
+  top: 70px
   max-width: 900px
+  background-color: fade-out($color-white, 0.05)
