--- a/apps/web/templates/posts/index.html.slim
+++ b/apps/web/templates/posts/index.html.slim
@@ -1,6 +1,6 @@
 - if posts.any?
   - posts.each do |post|
-    .row.post.p-3
+    .row.post
       .col
         .row
           .col.text-center.post__title
