--- a/apps/web/templates/shared/_navbar.html.slim
+++ b/apps/web/templates/shared/_navbar.html.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light.header.mb-3
+nav.navbar.fixed-top.navbar-expand-lg.navbar-light.header
   .navbar-brand
     = link_to routes.root_path
       = img(src: '/assets/logo.png', class: 'w-25')
@@ -16,9 +16,9 @@ nav.navbar.navbar-expand-lg.navbar-light.header.mb-3
       - if user_signed_in?
         li.nav-item
           = form_for :session, routes.destroy_session_path, method: :delete do
-            = submit "Sign out, #{current_user.full_name}", class: 'nav-link btn btn-dark text-white'
+            = submit "Sign out, #{current_user.full_name}", class: 'nav-link btn btn-sm btn-outline-dark text-white'
       - else
         li.nav-item.mx-md-1
-          = link_to 'sign up', routes.new_registration_path, class: 'nav-link btn btn-dark text-white'
+          = link_to 'sign up', routes.new_registration_path, class: 'nav-link btn btn-sm btn-outline-dark text-white'
         li.nav-item.mx-md-1
-          = link_to 'sign in', routes.new_session_path, class: 'nav-link btn btn-dark text-white'
+          = link_to 'sign in', routes.new_session_path, class: 'nav-link btn btn-sm btn-outline-dark text-white'
