--- a/apps/web/assets/stylesheets/shared/layout.sass
+++ b/apps/web/assets/stylesheets/shared/layout.sass
@@ -6,6 +6,7 @@ body
 .header
   background-color: $color-purple
 .wrapper
-  top: 70px
+  top: 100px
   max-width: 900px
-  background-color: fade-out($color-white, 0.05)
+  .with-white-bg
+    background-color: fade-out($color-white, 0.05)
