--- a/apps/web/templates/posts/show.html.slim
+++ b/apps/web/templates/posts/show.html.slim
@@ -23,3 +23,9 @@
           = link_to 'edit post', routes.edit_post_path(post.id), class: 'btn btn-warning d-inline-block mx-1'
           = form_for :post, routes.post_path(post.id), method: :delete, class: 'd-inline-block mx-1' do
             = submit 'delete post', class: 'btn btn-danger'
+.row
+  .col
+    - comments.each do |comment|
+      p= comment.user.full_name
+      p= comment.created_at
+      p= comment.body
