add create and delete actions for comments, add styles, fix wrapper styles

--- a/apps/web/assets/stylesheets/includes/_bootstrap_custom.sass
+++ b/apps/web/assets/stylesheets/includes/_bootstrap_custom.sass
@@ -9,6 +9,7 @@
       border-color: darken($color-purple, 15%)
 
 .card
+  border: none
   &-header
     color: $color-white
     background-color: $color-purple
