--- a/apps/web/assets/stylesheets/shared/layout.sass
+++ b/apps/web/assets/stylesheets/shared/layout.sass
@@ -6,7 +6,8 @@ body
 .header
   background-color: $color-purple
 .wrapper
-  top: 100px
+  top: 75px
   max-width: 900px
+  margin: 0 10px 10px 10px
   .with-white-bg
     background-color: fade-out($color-white, 0.05)
