--- a/apps/web/assets/stylesheets/posts.sass
+++ b/apps/web/assets/stylesheets/posts.sass
@@ -1,7 +1,10 @@
 .post
   padding: 10px
+  margin-bottom: 10px
+  -webkit-box-shadow: 0 0 25px 0 rgba(0,0,0,0.5)
+  -moz-box-shadow: 0 0 25px 0 rgba(0,0,0,0.5)
+  box-shadow: 0 0 25px 0 rgba(0,0,0,0.5)
   &__title
-    border-top: 5px solid $color-purple
     font-size: 40px
     font-weight: bolder
     color: $color-purple
@@ -12,3 +15,5 @@
         font-size: 18px
         font-weight: bolder
         color: $color-purple
+  &__body
+    word-break: break-word
