--- a/apps/web/templates/posts/show.html.slim
+++ b/apps/web/templates/posts/show.html.slim
@@ -11,6 +11,7 @@
           = post.user.full_name
         p
           span
+            i.far.fa-clock
             ' Posted on:
           = post.created_at.strftime("%B %d, %Y") + ' at ' + post.created_at.strftime("%H:%M")
     hr
@@ -23,9 +24,8 @@
           = link_to 'edit post', routes.edit_post_path(post.id), class: 'btn btn-warning d-inline-block mx-1'
           = form_for :post, routes.post_path(post.id), method: :delete, class: 'd-inline-block mx-1' do
             = submit 'delete post', class: 'btn btn-danger'
-.row
-  .col
-    - post.comments.each do |comment|
-      p= comment.user.full_name
-      p= comment.created_at
-      p= comment.body
+.row.mt-5
+  .col-md-10.justify-content-end
+    h3 Comments
+    = render partial: 'comments/form'
+    = render partial: 'comments/list'
