--- a/apps/web/templates/posts/index.html.slim
+++ b/apps/web/templates/posts/index.html.slim
@@ -9,10 +9,12 @@
           .col.post__author
             p
               span
+                i.far.fa-user-circle
                 ' Author:
               = post.user.full_name
             p
               span
+                i.far.fa-clock
                 ' Posted on:
               = post.created_at.strftime("%B %d, %Y") + ' at ' + post.created_at.strftime("%H:%M")
         hr
@@ -21,6 +23,8 @@
             p =post_truncate(post.body)
         .row
           .col.post__actions
-            = link_to 'read more', routes.post_path(post.id), class: 'btn btn-primary'
+            a.btn.btn-primary href="#{routes.post_path(post.id)}"
+              ' Read more
+              i.fas.fa-angle-double-right'
 - else
   | here will be list of posts soon...
