--- a/apps/web/templates/posts/show.html.slim
+++ b/apps/web/templates/posts/show.html.slim
@@ -7,6 +7,7 @@
       .col.post__author
         p
           span
+            i.far.fa-user-circle
             ' Author:
           = post.user.full_name
         p
