minor layout fixes

--- a/apps/web/templates/posts/index.html.slim
+++ b/apps/web/templates/posts/index.html.slim
@@ -25,6 +25,6 @@
           .col.post__actions
             a.btn.btn-primary href="#{routes.post_path(post.id)}"
               ' Read more
-              i.fas.fa-angle-double-right'
+              i.fas.fa-angle-double-right
 - else
   | here will be list of posts soon...
